Co-authored-by: choinezu <choinezu@users.noreply.github.com>

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,17 @@
-<ion-header [translucent]="true">
-    <ion-toolbar>
-        <ion-title>
+<ion-header>
+    <ion-toolbar color="warning">
+        <ion-title style=" text-align: center; ">
             Potasio
         </ion-title>
     </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-    <ion-header collapse="condense">
-        <ion-toolbar>
-            <ion-title size="large">Blank</ion-title>
-        </ion-toolbar>
-    </ion-header>
+<ion-content>
+    <ion-card>
+        <ion-card-content>
+            -pan /n-azucar -2kg manzanas -5kg papas
+        </ion-card-content>
+    </ion-card>
 
-    <div id="container">
-        <strong>Ready to create an app?</strong>
-        <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-    </div>
+
 </ion-content>
