--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,8 @@
 <ion-content>
     <ion-card>
         <ion-card-content>
-            -pan /n-azucar -2kg manzanas -5kg papas
+
+            -pan <br>-azucar -2 kg manzanas -5kg papas aaaaaaaaaaa
         </ion-card-content>
     </ion-card>
 
