--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,18 +1,79 @@
-<ion-header>
-    <ion-toolbar color="warning">
-        <ion-title style=" text-align: center; ">
-            Potasio
-        </ion-title>
-    </ion-toolbar>
-</ion-header>
 
 <ion-content>
-    <ion-card>
+    <ion-card color="warning">
         <ion-card-content>
 
             -pan <br>-azucar -2 kg manzanas -5kg papas aaaaaaaaaaa
         </ion-card-content>
     </ion-card>
 
+    <ion-card color="success">
+        <ion-card-content>
 
+            -pan <br>-azucar -2 kg manzanas -5kg papas aaaaaaaaaaa
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card color="danger">
+        <ion-card-content>
+
+            -pan <br>-azucar -2 kg manzanas -5kg papas aaaaaaaaaaa
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card color="primary">
+        <ion-card-content>
+
+            -pan <br>-azucar -2 kg manzanas -5kg papas aaaaaaaaaaa
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card color="secondary">
+        <ion-card-content>
+
+            -pan <br>-azucar -2 kg manzanas -5kg papas 
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card color="secondary">
+        <ion-card-content>
+
+            -pan <br>-azucar -2 kg manzanas -5kg papas 
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card color="secondary">
+        <ion-card-content>
+
+            -pan <br>-azucar -2 kg manzanas -5kg papas 
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card color="secondary">
+        <ion-card-content>
+
+            -pan <br>-azucar -2 kg manzanas -5kg papas 
+        </ion-card-content>
+    </ion-card>
+
+
+    
 </ion-content>
+
+
+
+
+
+
+
+<ion-footer style="background-color: white;">
+
+    <ion-card color="dark" style="margin: 0px 0px; border-radius: 20px;" > 
+        
+        <ion-item color="light">
+            <ion-input  placeholder="Escribir..."></ion-input>
+            <ion-button color="success"><ion-icon name="checkmark-outline"></ion-icon></ion-button>
+        </ion-item>
+    </ion-card>
+    
+</ion-footer>
