--- a/src/app/pages/inicio/inicio.page.scss
+++ b/src/app/pages/inicio/inicio.page.scss
@@ -1,8 +1,14 @@
 ion-content{
-    --ion-background-color:#363636;
-    --ion-color:white;
+
+  
+    --ion-background-color: #232526;  /* fallback for old browsers */
+    --ion-background-color: -webkit-linear-gradient(to left, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+    --ion-background-color: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .text{
     color: rgb(0, 0, 0);
+
 }
+
